--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                     padding: 10px;
                     border: 1px solid black;
                     max-width: 550px;
+                    height: 160px;
                 }
                 /* The Close Button */
                 
@@ -365,8 +366,8 @@
                         <span id="amount" style="font-size: 30px; margin: 15px;">0</span>
                         <span><button id="plus-button" class="plus-button" data-toggle="modal" onclick="increment()"><strong>+</strong></button></span>
                         <br><br>
-                        <button id="agree-button" paddingleft="200%" class="agree-button" data-toggle="modal" onclick="agree()"><strong>Agree</strong></button>
-                        <button id="cancel-button" class="cancel-button" data-toggle="modal" onclick="cancel()"><strong>Cancel</strong></button>
+                        <button id="agree-button" style="float: right; margin:5px;" class="agree-button" data-toggle="modal" onclick="agree()"><strong>Agree</strong></button>
+                        <button id="cancel-button" style="float: right; margin:5px;" class="cancel-button" data-toggle="modal" onclick="cancel()"><strong>Cancel</strong></button>
 
                     </div>
                 </div>
