--- a/index.html
+++ b/index.html
@@ -5,58 +5,7 @@
 
 <head>
     <title>HICKIES Originals</title>
-    <script>
-        var amount = 0;
-
-        /*returns corresponding selected colour*/
-        function colorSelect(color) {
-            document.getElementById("color").innerHTML = color;
-            document.getElementById("color2").innerHTML = color;
-        }
-
-        /*increments the cart items when + button is pressed*/
-        function increment() {
-            amount++;
-            document.getElementById("amount").innerHTML = amount;
-        }
-
-        /*decrements the cart items when - button is pressed*/
-        function decrement() {
-            amount = amount < 1 ? 0 : --amount;
-            document.getElementById("amount").innerHTML = amount;
-        }
-
-        /*closes popup modal and resets amount to zero when cancel button is pressed*/
-        function cancel() {
-            amount = 0;
-            document.getElementById("amount").innerHTML = amount;
-            modal.style.display = "none";
-        }
-        /*closes popup modal, proceeds to checkout and shows details of selected items */
-        function agree() {
-            document.getElementById("amountBtn").innerHTML = amount;
-            document.getElementById("myBtn").innerHTML = "Check out Now";
-            /*-----------------------------------------------------------------------*/
-            /*--Add details--*/
-            var i = 0;
-            for (i = 0; i < amount; i++) {
-                /*Create element creates whatever is in <>*/
-                var newBtn = document.createElement("Button");
-                /*Add a class defined in css*/
-                newBtn.classList.add("color-button");
-                /*Generate the button colour class. class names are '-' delimited (no spaces) and are in all small letters, which shouldn't matter since javascript but don't care to experiment further*/
-                var btnColor = "button-" + document.getElementById("color").innerHTML;
-                btnColor = btnColor.toLowerCase().replace(" ", "-");
-                newBtn.classList.add(btnColor);
-                /*Add the newly created element to our detail division.*/
-                document.getElementById("detail_no").appendChild(newBtn);
-            }
-            /*-----------------------------------------------------------------------*/
-            amount = 0;
-            modal.style.display = "none";
-
-        }
-    </script>
+    <script src="cart.js"></script>
 </head>
 
 <body>
@@ -80,7 +29,7 @@
             <span class="fa fa-star checked"></span>
             <span style="color:rgb(208, 208, 208);display: inline-block; width: 25%;margin: 5px; text-align:center;">1,239 reviews</span>
 
-            <h2 style="color: rgb(160, 78, 91); ">$14.99<span style="color:rgb(208, 208, 208);display: inline-block; width: 40%;margin: 5px; text-align:center; font-size: 16px;">$17.99 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 25% OFF </span> </h2>
+            <h2 id="cost;" style="color: rgb(160, 78, 91); ">$14.99<span style="color:rgb(208, 208, 208);display: inline-block; width: 40%;margin: 5px; text-align:center; font-size: 16px;">$17.99 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 25% OFF </span> </h2>
             <!--needs to be greyed out and on same line as above-->
 
 
@@ -420,6 +369,27 @@
         <!--help form anchor-->
         <span><a href="help.html">click here</a></span>
         <p><strong>Shipping & Returns</strong></p>
+
+        <!--------------------------------------------------------------------------------------------->
+        <div class="modal fade" id="checkoutModal" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Cart Summary</h4>
+                    </div>
+                    <div id="summary" class="modal-body">
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="cart-button button-animation" data-dismiss="modal">Proceed to Checkout</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--------------------------------------------------------------------------------------------->
+
     </div>
 
 </body>
