--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <span class="fa fa-star checked"></span>
             <span style="color:rgb(208, 208, 208);display: inline-block; width: 25%;margin: 5px; text-align:center;">1,239 reviews</span>
 
-            <h2 id="cost;" style="color: rgb(160, 78, 91); ">$14.99<span style="color:rgb(208, 208, 208);display: inline-block; width: 40%;margin: 5px; text-align:center; font-size: 16px;">$17.99 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 25% OFF </span> </h2>
-            <!--needs to be greyed out and on same line as above-->
+            <h2 id=" cost;" style="color: rgb(160, 78, 91); ">$14.99<span style="color:rgb(208, 208, 208);display: inline-block; width: 40%;margin: 5px; text-align:center; font-size: 16px;">$17.99 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 25% OFF </span> </h2>
+            <!---->
 
 
             <p>ONLINE EXCLUSIVE</p>
@@ -369,6 +369,12 @@
         <!--help form anchor-->
         <span><a href="help.html">click here</a></span>
         <p><strong>Shipping & Returns</strong></p>
+
+        <!--------------------------------------------------------------------------------------------->
+        <!--checkout modal application-->
+
+
+        <!--------------------------------------------------------------------------------------------->
 
     </div>
 
